--- a/Week1/StudentApp/src/com/ex/io/.project
+++ b/Week1/StudentApp/src/com/ex/io/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>day2Assignment1</name>
+	<name>io</name>
 	<comment></comment>
 	<projects>
 	</projects>
