--- a/Week1/StudentApp/src/com/ex/pojos/.project
+++ b/Week1/StudentApp/src/com/ex/pojos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JAvaFundamental</name>
+	<name>pojos</name>
 	<comment></comment>
 	<projects>
 	</projects>
