--- a/Katelyn_Peterson_Code/Week1/.recommenders/caches/identified-project-coordinates.json
+++ b/Katelyn_Peterson_Code/Week1/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_162","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\Users\\Katelyn\\Documents\\GitHub\\BatchRepository\\Katelyn_Peterson_Code\\Week1\\JUnitIntro","type":"PROJECT","hints":{"PROJECT_NAME":"JUnitIntro"}},"ABSENT"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_162","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
