--- a/Katelyn_Peterson_Code/Week1/junitmaven/pom.xml
+++ b/Katelyn_Peterson_Code/Week1/junitmaven/pom.xml
@@ -5,4 +5,15 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>MavenWithJUnit</name>
   <description>This is our first Maven project!</description>
+  
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.8.1</version>
+		    <scope>test</scope>
+		</dependency>
+	</dependencies>
+
 </project>
