--- a/William_Rosser_Code/Week2/JDBC example/src/app.properties
+++ b/William_Rosser_Code/Week2/JDBC example/src/app.properties
@@ -1,4 +1,4 @@
-driver=oracle.jdnc.driver.OracleDriver
-url=jdbc:oracle:thin:@//localhost:1521//xe
+driver=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@localhost:1521:xe
 usr=demo
 pwd=demo
