--- a/Peter_Chase_Code/Week2/.recommenders/caches/identified-project-coordinates.json
+++ b/Peter_Chase_Code/Week2/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_161","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.7"}},"jre:jre:1.7.0"],[{"location":"C:\\Users\\Peter\\Desktop\\Revature\\BatchRepository\\Peter_Chase_Code\\Week2\\BankApp2","type":"PROJECT","hints":{"PROJECT_NAME":"BankApp2"}},"com.peter:BankApp2:0.0.1"]]
