--- a/Riley_Mathis_Code/Week1/Bank_2/pom.xml
+++ b/Riley_Mathis_Code/Week1/Bank_2/pom.xml
@@ -11,10 +11,17 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+  	<maven.compiler.source>1.8</maven.compiler.source>
+  	<maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
+  	<dependency>
+  	  <groupId>com.oracle</groupId>
+  	  <artifactId>ojdbc7</artifactId>
+  	  <version>11.2.0</version>
+  	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
