--- a/Philip_Harris_code/RevatureBanking/pom.xml
+++ b/Philip_Harris_code/RevatureBanking/pom.xml
@@ -6,6 +6,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>RevatureBanking</name>
 	<description>New upgraded Revature Banking app</description>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
