--- a/BankAsgn/pom.xml
+++ b/BankAsgn/pom.xml
@@ -23,6 +23,17 @@
             <artifactId>ojdbc7</artifactId>
             <version>11.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
