--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\mjbra\\OneDrive\\Documents\\Work\\Code\\GitHub\\BatchRepository\\Mark_Brandao_Code\\Week 2\\BankApp","type":"PROJECT","hints":{"PROJECT_NAME":"bankapp"}},"com.revature:bankapp:0.0.1"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_161","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
