--- a/Katelyn_Peterson_Code/Week2/Last_Chance_Bank_and_Diner/pom.xml
+++ b/Katelyn_Peterson_Code/Week2/Last_Chance_Bank_and_Diner/pom.xml
@@ -9,6 +9,7 @@
   	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -26,5 +27,34 @@
 			<version>11.2.0</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <!--addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix-->
+                            <mainClass>com.revature.bank.driver.MainDriver</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
   
 </project>
