--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/pom.xml
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/pom.xml
@@ -3,6 +3,7 @@
   <groupId>com.revature</groupId>
   <artifactId>TRMS_Project_One</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   <name>TRMS Project One</name>
   <description>First Revature Project</description>
   
@@ -25,6 +26,24 @@
 			<artifactId>ojdbc7</artifactId>
 			<version>11.2.0</version>
 		</dependency>
+			<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>3.1.0</version>
+		    <scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.9.0.pr4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.0.pr4</version>
+		</dependency>
 	</dependencies>
-	
 </project>
