--- a/Mark_Brandao_Code/Week 3/helloservlets/pom.xml
+++ b/Mark_Brandao_Code/Week 3/helloservlets/pom.xml
@@ -1,27 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.revature</groupId>
-	<artifactId>bankapp</artifactId>
+	<groupId>com.ex</groupId>
+	<artifactId>helloservlets</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Banking Application v2</name>
-	<description>Using DB for data persistence</description>
+	<packaging>war</packaging>
+	<name>Hello Servlets</name>
+	<description>This application will serve as an introduction to servlets. 3/14/18 aka pi day</description>
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>11.2.0</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 		<dependency>
@@ -35,14 +31,5 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.0.pr4</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-
 	</dependencies>
-	<packaging>war</packaging>
 </project>
