Initial TRMS commit

--- a/Mark_Brandao_Code/Week 4/TRMS/pom.xml
+++ b/Mark_Brandao_Code/Week 4/TRMS/pom.xml
@@ -7,7 +7,6 @@
 	<packaging>war</packaging>
 	<name>Tuition Reimbursement Management System</name>
 	<description>A web-based application that allows users to request, approve, and manage requests for tuition reimbursement.</description>
-
 	<properties>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -31,6 +30,17 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.0.pr4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.3m</version>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc7</artifactId>
+			<version>11.2.0</version>
 		</dependency>
 	</dependencies>
 </project>
