--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/WEB-INF/web.xml
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  	<servlet>
+		<servlet-name>LoadViewServlet</servlet-name>
+		<servlet-class>com.trms.servlets.LoadViewServlet</servlet-class>
+	</servlet>
 </web-app>
