--- a/Katelyn_Peterson_Code/Week3/.recommenders/caches/identified-project-coordinates.json
+++ b/Katelyn_Peterson_Code/Week3/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\Users\\Katelyn\\Documents\\GitHub\\BatchRepository\\Katelyn_Peterson_Code\\Week3\\TRMS_Project_One","type":"PROJECT","hints":{"PROJECT_NAME":"TRMS_Project_One"}},"com.revature:TRMS_Project_One:0.0.1"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_162","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
